<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".WelcomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_welcome_dynamic"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_welcome_message_dynamic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="?android:attr/textColorPrimary"
                tools:text="@string/welcome_message_placeholder" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="64dp"
                android:src="@drawable/sinrecordatorio"
                android:contentDescription="@string/empty_reminders_icon_description" />

            <TextView
                android:id="@+id/tv_no_reminders_info_dynamic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/no_reminders_message"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="?android:attr/textColorSecondary" />


            <ProgressBar
                android:id="@+id/progress_bar_welcome_dynamic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_reminder_dynamic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/add_new_reminder_description"
        app:fabSize="normal"
        app:tint="@color/white"
        app:backgroundTint="?attr/colorPrimary" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
